sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:38: error: not found: value échangé
	} while (!échangé)
                  ^